--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <H1 class="first">Test 1</H1>
     <p class="second">Test Git hub</p>
+    <p class="text">Test 2 Git hub</p>
 </body>
 </html>
