--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p class="text">Test 2 Git hub</p>
     <p class="text">Test 33333333333333333333333333333333333333333333 Git hub</p>
 
-    <p class="text">Test from home! 333333333333333333333311113</p>
+    <p class="text">Test from home! 333333333333333333333311113
+    TEST FROM CENTR !</p>
 </body>
 </html>
