--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <p class="text">Test 2 Git hub</p>
     <p class="text">Test 33333333333333333333333333333333333333333333 Git hub</p>
 
-    <p class="text">Test from home!</p>
+    <p class="text">Test from home! 2</p>
 </body>
 </html>
