--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Amber Crystal</title>
 </head>
 <body>
-    <H1 class="first">Test 1</H1>
-    <p class="second">Test Git hub</p>
-    <p class="text">Test 2 Git hub</p>
-    <p class="text">Test 33333333333333333333333333333333333333333333 Git hub</p>
-
-    <p class="text">Test from home! 333333333333333333333311113
-    TEST FROM CENTR !</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">Amber Crystal</a></li>
+            </ul>
+            <ul>
+                <li><a href="">Украшения</a></li>
+                <li><a href="">Магазин</a></li>
+                <li><a href="">Информация</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Бутик оригинальных украшений с кристалами Swarovski</h1>
+    </main>
 </body>
 </html>
