--- a/index.html
+++ b/index.html
@@ -10,18 +10,98 @@
     <header>
         <nav>
             <ul>
-                <li><a href="">Amber Crystal</a></li>
+                <li><a href="#">Amber Crystal</a></li>
             </ul>
             <ul>
-                <li><a href="">Украшения</a></li>
-                <li><a href="">Магазин</a></li>
-                <li><a href="">Информация</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="#">Украшения</a></li>
+                <li><a href="#">Магазин</a></li>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <h1>Бутик оригинальных украшений с кристалами Swarovski</h1>
+        <section>
+            <h2>Преимущества</h2>
+            <p>Доставка по всей России</p>
+        </section>
+
+        <section>
+            <h2>Хиты продаж</h2>
+            <ul>
+                <li class="hit">1</li>
+                <li class="hit">2</li>
+                <li class="hit">3</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Серьги</h2>
+            <a href="#">
+                <img src="/img/earring.jpg" width="300" alt="Серьги">
+            </a>
+        </section>
+
+        <section>
+            <h2>Подвески</h2>
+            <a href="#">
+                <img src="/img/necklace.jpg" width="300" alt="Подвески">
+            </a>
+        </section>
+
+        <!-- Под вопросом -->
+        <section> 
+            <h2>Новинки</h2>
+            <ul>
+                <li class="hit">1</li>
+                <li class="hit">2</li>
+                <li class="hit">3</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Кольца</h2>
+            <a href="#">
+                <img src="/img/ring.jpg" width="300" alt="Кольца">
+            </a>
+        </section>
+
+        <!-- Под вопросом -->
+        <section>
+            <h2>Браслеты</h2>
+            <a href="#">
+                <img src="/img/bracelet.jpg" width="300" alt="Браслеты">
+            </a>
+        </section>
+
+        <section>
+            <h2>Информация</h2>
+                <h3>Оплата</h3>
+                <p>Все транзакции обрабатываются через Paypal и все основные кредитные карты</p>
+
+                <h3>Доставка</h3>
+                <p>Оформите доставку в ближайший пункт выдачи заказов PickPoint, Почта России, CDEK, Boxberry и заберите посылку в удобное для вас время. <br>
+                Курьерская доставка на дом или в офис <br>
+                Самовывоз из пунктов выдачи заказов <br>
+                Самовывоз или доставка из магазинов-партнёров</p>
+
+                <h3>Условия возврата</h3>
+                <p>Возврат ювелирных изделий из драгоценных металлов и/или с драгоценными камнями, а также ювелирных и стальных часов надлежащего качества, осуществляется, в случае если изделие приобретено дистанционным способом, а обращение с требованием о возврате получено не позднее 7 (семи) календарных дней с момента приобретения (получения), при условии сохранения товарного вида и маркировки изделия (сохранены пломбы и бирки). <br>
+
+                Возврат денежных средств за указанные изделия осуществляется в течение 10 (десяти) рабочих дней с момента получения изделий продавцом. <br>
+                    
+                Транспортные расходы продавца при возврате ювелирных изделий из драгоценных металлов и/или с драгоценными камнями, ювелирных и стальных часов надлежащего качества, приобретенных дистанционным способом, компенсируются покупателем.</p>
+        </section>
     </main>
+
+    <footer>
+        <section>
+            <h2>Подписаться</h2>
+            <!-- Здесь будет форма -->
+        </section>
+        
+    </footer>
 </body>
 </html>
