--- a/index.html
+++ b/index.html
@@ -101,7 +101,32 @@
             <h2>Подписаться</h2>
             <!-- Здесь будет форма -->
         </section>
-        
+        <div>
+            <h2>Amber Crystal</h2>
+            <a href="#">Zhernovnikov Dmitriy</a>
+            <p>Inspired by <a href="#">Anastasia Miagkova</a></p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Украшения</a></li>
+                <li><a href="#">Магазин</a></li>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <div>
+                <p>Соц. сети</p>
+                <ul>
+                    <li><a href="#">Вконтакте</a></li>
+                    <li><a href="#">Телеграм</a></li>
+                    <li><a href="#">Инстаграм</a></li>
+                </ul>
+            </div>
+        </nav>
     </footer>
+    
+    <section>
+        <p>Спасибо! Данные успешно отправлены.</p>
+        <button type="button">Закрыть</button>
+    </section>
 </body>
 </html>
